Bug 1629984 - Stop enumerating suspended cameras. r=padenot

Suspended cameras are not able to capture data thus they are removed from the list of enumerated devices.

Differential Revision: https://phabricator.services.mozilla.com/D74210