media/webrtc/trunk/webrtc/modules/video_capture/objc/device_info_objc.mm
@@ -43,17 +43,39 @@
 }
 
 + (int)captureDeviceCount {
-  return [[AVCaptureDevice devicesWithMediaType:AVMediaTypeVideo] count];
+  int cnt = 0;
+  for (AVCaptureDevice* device in
+       [AVCaptureDevice devicesWithMediaType:AVMediaTypeVideo]) {
+    if ([device isSuspended]) {
+      continue;
+    }
+    cnt++;
+  }
+  return cnt;
 }
 
 + (AVCaptureDevice*)captureDeviceForIndex:(int)index {
-  return [[AVCaptureDevice devicesWithMediaType:AVMediaTypeVideo]
-      objectAtIndex:index];
+  int cnt = 0;
+  for (AVCaptureDevice* device in
+       [AVCaptureDevice devicesWithMediaType:AVMediaTypeVideo]) {
+    if ([device isSuspended]) {
+      continue;
+    }
+    if (cnt == index) {
+      return device;
+    }
+    cnt++;
+  }
+
+  return nil;
 }
 
 + (AVCaptureDevice*)captureDeviceForUniqueId:(NSString*)uniqueId {
   for (AVCaptureDevice* device in
        [AVCaptureDevice devicesWithMediaType:AVMediaTypeVideo]) {
+    if ([device isSuspended]) {
+      continue;
+    }
     if ([uniqueId isEqual:device.uniqueID]) {
       return device;
     }
